[package]
name = "memento"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
byteorder = "1.4.3"
bytes = "1.2.1"
chrono = "0.4.23"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
