[package]
name = "memento"
version = "0.2.0"
edition = "2021"
authors = ["kafkiansky <vadimzanfir@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kafkiansky/memento"
keywords = ["memcached", "tokio", "async", "cache"]
description = "async memcached client for rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bytes = "1.2.1"
tokio-stream = "0.1"
tokio = { version = "1", features = ["bytes", "net", "io-util"]}
